--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     background-color: rgb(0, 0, 0);
 }
 .background{
-    background: url(/res/gtbg.png);
+    background: url(https://darpan-exe.github.io/GameTools/res/gtbg.png);
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
