--- a/DiceRoll/dice-webpage.css
+++ b/DiceRoll/dice-webpage.css
@@ -14,6 +14,10 @@
     font-weight: bold;
     border-radius: 20px;
 }
+#output-textbox3{
+    padding: 10px;
+    margin: 0px auto 10PX auto;
+}
 
 .plain-back{
 background-color: black;
@@ -33,7 +37,6 @@ height:70vh;
 }
 .dices-container{
     display: flex;
-    flex-wrap: wrap;
 }
 .dice-container{
     display: flex;
