--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ nav>.web-logo{
     color: white;
     border: var(--theme-border-color) 2px solid;
     border-radius: 20px;
-    height: 170px;
-    width: 110px;
+    min-height: 170px;
+    min-width: 110px;
     display: flex;
     flex-direction: column;
     padding: 20px 15px;
@@ -107,6 +107,29 @@ nav>.web-logo{
     font-size: 7vh;
     color: white;
     margin: 0px auto 30px auto;
+}
+.spin-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 70vh;
+    width: 70vw;
+}
+.spin-table{
+    background: url(https://darpan-exe.github.io/GameTools/res/gtspintable.png);
+    height: 100%;
+    width: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.spin-table>img{
+max-height: 30%;
+max-width: 30%;
 }
 
 @media screen and (max-width:985px) {
