--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ nav>.web-logo{
     flex-direction: column;
     padding: 20px 15px;
     text-align: center;
+    margin: 0px 10px;
 }
 .card-item:hover {
     background: white;
