--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     background-color: rgb(0, 0, 0);
 }
 .background{
-    background: url(https://darpan-exe.github.io/GameTools/res/gtbg.png);
+    background: url(./res/gtbg.png);
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -118,7 +118,7 @@ nav>.web-logo{
     width: 70vw;
 }
 .spin-table{
-    background: url(https://darpan-exe.github.io/GameTools/res/gtspintable.png);
+    background: url(./res/gtspintable.png);
     height: 100%;
     width: 100%;
     background-size: contain;
@@ -129,7 +129,7 @@ nav>.web-logo{
     align-items: center;
 }
 .spin-table>img{
-max-height: 30%;
+max-height: 50%;
 max-width: 30%;
 }
 
